<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/bt_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="100dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginTop="16dp"
        android:text="@string/popular"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_recommend" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:clipToPadding="true"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/tv_popular"
        app:layout_constraintTop_toBottomOf="@+id/tv_popular"
        tools:listitem="@layout/main_list_item" />


    <TextView
        android:id="@+id/tv_top_rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/top_rated"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/tv_popular"
        app:layout_constraintTop_toBottomOf="@+id/rv_popular" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_top_rated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:clipToPadding="true"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/tv_top_rated"
        app:layout_constraintTop_toBottomOf="@+id/tv_top_rated"
        tools:listitem="@layout/main_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
