<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.discover.DiscoverFragment">

    <TextView
        android:id="@+id/popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing"
        android:text="@string/popular"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popular_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/discover_item_height"
        android:layout_marginVertical="@dimen/half_spacing"
        android:clipToPadding="false"
        android:elevation="@dimen/unit_dimen"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/default_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/popular"
        app:layout_constraintTop_toBottomOf="@+id/popular"
        tools:listitem="@layout/list_item_discover" />

    <TextView
        android:id="@+id/top_rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing"
        android:text="@string/top_rated"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popular_recycler_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_rated_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/discover_item_height"
        android:layout_marginVertical="@dimen/half_spacing"
        android:clipToPadding="false"
        android:elevation="@dimen/unit_dimen"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/default_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/top_rated"
        app:layout_constraintTop_toBottomOf="@+id/top_rated"
        tools:listitem="@layout/list_item_discover" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/recommend_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing"
        android:clickable="true"
        app:fabSize="mini"
        android:contentDescription="@string/recommend_fab_description"
        android:focusable="true"
        android:src="@drawable/ic_recommend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
