<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.discover.DiscoverFragment">

    <TextView
        android:id="@+id/tv_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/popular"
        style="@style/TextAppearance.AppCompat.Title.Inverse"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/default_margin"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/tv_popular"
        app:layout_constraintTop_toBottomOf="@+id/tv_popular"
        tools:listitem="@layout/discover_list_item" />


    <TextView
        android:id="@+id/tv_top_rated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Title.Inverse"

        android:layout_marginVertical="@dimen/default_margin"
        android:text="@string/top_rated"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/tv_popular"
        app:layout_constraintTop_toBottomOf="@+id/rv_popular"
        tools:visibility="visible" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_top_rated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/default_margin"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/tv_top_rated"
        app:layout_constraintTop_toBottomOf="@+id/tv_top_rated"
        tools:listitem="@layout/discover_list_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:clickable="true"
        android:src="@drawable/ic_recommend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true"
        android:contentDescription="@string/recommend_fab_description" />


</androidx.constraintlayout.widget.ConstraintLayout>
