<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.movie.MovieDetailsFragment">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.recommendmeamovie.ui.movie.MovieDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@{viewModel.movieDetails.error.localizedMessage}"
                android:visibility="@{viewModel.loadingFailed ? View.VISIBLE : View.GONE}"
                tools:text="Error Message"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingVertical="@dimen/default_spacing"
                android:visibility="@{viewModel.movieLoaded ? View.VISIBLE : View.INVISIBLE}"
                tools:visibility="visible">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/poster_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_spacing"
                    app:cardCornerRadius="@dimen/round_edges_radius"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@color/semi_transparent_grey"
                    app:strokeWidth="@dimen/unit_dimen">

                    <ImageView
                        android:id="@+id/poster"
                        android:layout_width="@dimen/big_poster_width"
                        android:layout_height="@dimen/big_poster_height"
                        android:contentDescription="@string/movie_poster_description"
                        android:scaleType="fitXY"
                        app:poster="@{viewModel.movieDetails.data.poster}"
                        tools:src="@drawable/ic_broken_image" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_spacing"
                    android:text="@{viewModel.movieDetails.data.title}"
                    android:textSize="@dimen/header_text_size"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.090"
                    app:layout_constraintStart_toEndOf="@+id/poster_card"
                    app:layout_constraintTop_toTopOf="@+id/poster_card"
                    tools:text="Citizen Kane" />

                <TextView
                    android:id="@+id/directed_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directed_by"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <TextView
                    android:id="@+id/director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/half_spacing"
                    android:textSize="@dimen/subheader_text_size"
                    android:text="@{viewModel.director.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/directed_by"
                    app:layout_constraintTop_toBottomOf="@+id/directed_by"
                    tools:text="Orson Welles" />

                <LinearLayout
                    android:id="@+id/details_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/director"
                    app:layout_constraintTop_toBottomOf="@+id/director">

                    <TextView
                        android:id="@+id/runtime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/default_spacing"
                        android:text="@{@string/runtime(viewModel.movieDetails.data.runtime)}"
                        tools:text="119 minutes" />

                    <TextView
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_spacing"
                        android:text="@{viewModel.year}"
                        tools:text="1941" />
                </LinearLayout>


                <TextView
                    android:id="@+id/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/half_spacing"
                    android:text="@{viewModel.movieDetails.data.genres}"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/details_layout"
                    app:layout_constraintTop_toBottomOf="@+id/details_layout"
                    tools:text="Drama/Mystery" />

                <LinearLayout
                    android:id="@+id/buttons_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_spacing"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/genre">

                    <TextView
                        android:id="@+id/vote_average"
                        android:layout_width="@dimen/movie_buttons_dimen"
                        android:layout_height="@dimen/movie_buttons_dimen"
                        android:layout_marginEnd="@dimen/half_spacing"
                        android:background="@drawable/ic_circle"
                        android:contentDescription="@string/vote_average_description"
                        android:gravity="center"
                        android:text="@{String.valueOf(viewModel.movieDetails.data.voteAverage)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/genre"
                        tools:text="7.5" />

                    <ImageView
                        android:id="@+id/watchlist"
                        android:layout_width="@dimen/movie_buttons_dimen"
                        android:layout_height="@dimen/movie_buttons_dimen"
                        android:layout_marginEnd="@dimen/half_spacing"
                        android:contentDescription="@string/add_to_watchlist_description"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_watchlist"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/genre" />

                    <ImageView
                        android:id="@+id/favorite"
                        android:layout_width="@dimen/movie_buttons_dimen"
                        android:layout_height="@dimen/movie_buttons_dimen"
                        android:layout_marginEnd="@dimen/half_spacing"
                        android:contentDescription="@string/add_to_watched_description"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_watched"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/genre" />
                </LinearLayout>

                <View
                    android:id="@+id/divider_one"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/unit_dimen"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/half_spacing"
                    android:background="@color/semi_transparent_grey"
                    app:layout_constraintTop_toBottomOf="@+id/buttons_layout"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_spacing"
                    android:layout_marginVertical="@dimen/half_spacing"
                    android:text="@{viewModel.movieDetails.data.overview}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_one"
                    tools:text="When a reporter is assigned to decipher newspaper magnate Charles Foster Kane's (Orson Welles) dying words, his investigation gradually reveals the fascinating portrait of a complex man who rose from obscurity to staggering heights. Though Kane's friend and colleague Jedediah Leland (Joseph Cotten), and his mistress, Susan Alexander (Dorothy Comingore), shed fragments of light on Kane's life, the reporter fears he may never penetrate the mystery of the elusive man's final word, Rosebud." />

                <View
                    android:id="@+id/divider_two"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/unit_dimen"
                    android:layout_marginVertical="@dimen/half_spacing"
                    android:background="@color/semi_transparent_grey"
                    app:layout_constraintTop_toBottomOf="@+id/overview" />

                <TextView
                    android:id="@+id/cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/half_spacing"
                    android:layout_marginStart="@dimen/default_spacing"
                    android:text="@string/cast"
                    android:textColor="@color/white"
                    android:textSize="@dimen/subheader_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_two" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_list"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/credit_list_item_height"
                    android:layout_marginTop="@dimen/half_spacing"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/half_spacing"
                    app:creditsList="@{viewModel.movieDetails.data.cast}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cast"
                    tools:listitem="@layout/list_item_credits" />

                <View
                    android:id="@+id/divider_three"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/unit_dimen"
                    android:layout_marginVertical="@dimen/half_spacing"
                    android:background="@color/semi_transparent_grey"
                    app:layout_constraintTop_toBottomOf="@+id/cast_list" />

                <TextView
                    android:id="@+id/crew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/half_spacing"
                    android:layout_marginStart="@dimen/default_spacing"
                    android:text="@string/crew"
                    android:textColor="@color/white"
                    android:textSize="@dimen/subheader_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider_three" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/crew_list"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/credit_list_item_height"
                    android:layout_marginTop="@dimen/half_spacing"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/half_spacing"
                    app:creditsList="@{viewModel.movieDetails.data.crew}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/crew"
                    tools:listitem="@layout/list_item_credits" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </ScrollView>
</layout>